fix: see description
Attachments removed due to incorrect usage, replaced custom inventory sync package with bad compund tag syncing of entire inventory. Added inventory full error message